--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,14 +10,14 @@
     <div class="bs-component">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!--div class="container"-->
-          <a class="navbar-brand" href="/">{{title}}</a>
+          <a class="navbar-brand" href="/angular-web">{{title}}</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav">
               <li class="nav-item"  [ngClass]="isHomeMenu ? 'active' : ''">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/angular-web">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item" [ngClass]="isFilmsMenu ? 'active' : ''">
                 <a class="nav-link" href="films">Films</a>
