--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
- <body>
+<!DOCTYPE html>
+<html lang = "en-US">
+  <head>
+    <meta charset = "UTF-8">
+    <title>externalStyle.html</title>
+    <link rel = "stylesheet" type = "text/css" href = "https://bootswatch.com/4/darkly/bootstrap.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  </head>
+  <body>
     <div class="bs-component">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <!--div class="container"-->
@@ -38,3 +46,4 @@
       <router-outlet></router-outlet>
     <!--/div-->
   </body>
+</html>
