--- a/src/app/admin/admin-film-add/admin-film-add.component.html
+++ b/src/app/admin/admin-film-add/admin-film-add.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <!-- Sidebar Holder -->
-  <app-sidebar [toggleSidebar]="toggleSidebar"></app-sidebar>
+  <app-sidebar [toggleSidebar]="toggleSidebar" [ajoutF]="addFilmSidebar"></app-sidebar>
 
   <!-- Page Content Holder -->
   <div id="content">
@@ -45,7 +45,7 @@
         </div>
         <div class="form-group">
           <label class="col-form-label" for="duration">Duration</label>
-          <input type="text" class="form-control" placeholder="Description" id="duration" [(ngModel)]="filmModel.duration" name="duration">
+          <input type="text" class="form-control" placeholder="Duration" id="duration" [(ngModel)]="filmModel.duration" name="duration">
         </div>
         <div class="form-group">
           <label class="col-form-label" for="genre">Genre</label>
