--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <li [ngClass]="listF ? 'active' : ''">
       <a href="admin/films-list">Liste des films</a>
     </li>
-    <li>
+    <li [ngClass]="ajoutF ? 'active' : ''">
       <a href="admin/film-add">Ajouter</a>
     </li>
   </ul>
