--- a/src/app/films/films-list/films-list.component.html
+++ b/src/app/films/films-list/films-list.component.html
@@ -11,7 +11,7 @@
     <i *ngIf="isNormalConnected && (getIdFilmUserArray.indexOf(film.id) == -1)" class="fas fa-plus fa-2x float-right" (click)="addFilmToUser(film.id)"></i>
     <i *ngIf="isNormalConnected && (getIdFilmUserArray.indexOf(film.id) != -1)" class="fas fa-check fa-2x float-right"></i>
     <div style="clear: both"></div>
-    <a class="btn badge-dark"  href="film-detail/{{film.id}}">Voir</a>
+    <!--a class="btn badge-dark"  href="film-detail/{{film.id}}">Voir</a-->
     <div class="line"></div>
   </div>
 </div>
